<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/photo"
                    android:layout_height="250dp"
                    android:id="@+id/Photo"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_60"
                        android:textSize="12dp"
                        android:text="@string/date"
                        android:layout_marginTop="4dp"
                        android:id="@+id/TextDate"/>
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_60"
                        android:textSize="12dp"
                        android:text="@string/type"
                        android:id="@+id/TextType"/>
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_60"
                        android:textSize="12dp"
                        android:text="@string/react"
                        android:id="@+id/TextLike"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:text="@string/caption"
                        android:id="@+id/TextCaption"/>

                </LinearLayout>
            </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/delete"
            android:textSize="16dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/delete_32"
            android:textColor="@color/red"
            android:id="@+id/BtnDelete"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/edit_post"
            android:textSize="16dp"
            android:textStyle="bold"
            android:id="@+id/BtnEdit"
            android:drawableRight="@drawable/edit_32"
            android:textColor="@color/primary"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="@color/black_60"/>
</LinearLayout>