<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:src="@drawable/banner_singin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/odormeanchey"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:textStyle="bold"/>
    <ScrollView
    android:layout_width="match_parent"
    android:id="@+id/Form"
    android:layout_height="wrap_content">
    <!--Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
        <!--  Input Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:fontFamily="@font/odormeanchey"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/InputEmail"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/email_32"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:fontFamily="@font/odormeanchey"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:drawableStart="@drawable/password_32"
                android:id="@+id/InputPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginTop="6dp"
            android:textColor="@color/primary"
            android:textSize="16dp"
            android:fontFamily="@font/odormeanchey"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/forgot_password"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/primary"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:id="@+id/BtnLogin"
                android:textSize="16dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/odormeanchey"
                android:drawableRight="@drawable/arrow_right_white_24"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/login"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/odormeanchey"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:text="@string/don_t_have_account"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16dp"
                android:fontFamily="@font/odormeanchey"
                android:id="@+id/BtnRegister"
                android:textColor="@color/primary"
                android:layout_marginLeft="6dp"
                android:text="@string/register_now"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>


    <!--Progress-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/SHOW_PROGRESS"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/blue"
            android:textSize="18dp"
            android:textAlignment="center"
            android:text="@string/checking_your_credential"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</LinearLayout>