<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:src="@drawable/banner_singup"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/Form"
        android:layout_height="wrap_content">
        <!--Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <!--  Input Full name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/InputFullName"
                    android:inputType="textEmailAddress"
                    android:drawableRight="@drawable/name_32"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Input Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/InputEmail"
                    android:inputType="textEmailAddress"
                    android:drawableRight="@drawable/email_32"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Input Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/password_32"
                    android:id="@+id/InputPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Input confirm Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/password_32"
                    android:id="@+id/InputConfirmPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Input confirm Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/gender_32"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:id="@+id/InputGender"
                    android:inputType="none"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/primary"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/BtnRegister"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/register"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/arrow_right_white_24"
                    android:textAllCaps="false"/>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>

<!--Progress-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/SHOW_PROGRESS"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/blue"
            android:textSize="18dp"
            android:textAlignment="center"
            android:text="@string/register_account"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>